added gig table

--- a/Backend/python/models/recommendationEngine.ipynb
+++ b/Backend/python/models/recommendationEngine.ipynb
@@ -12,33 +12,34 @@
      "text": [
       "Connected to SQLite database\n",
       "Freelancer data fetched successfully:\n",
+      "Gig data fetched successfully:\n",
       "\u001b[33mjob_recruiter_proxy\u001b[0m (to chat_manager):\n",
       "\n",
       "\n",
       "        Assess the freelancer and gig description and create a score. \n",
       "        freelancer skills: ['Python, SQL, Data Analysis']  \n",
       "        \n",
-      "        Gig descriptions: ['Create a web app intake form', 'Create an iPhone app that measures how long someone spends using social media apps']\n",
-      "        Gig IDs: ['a', 'b']\n",
+      "        Gig descriptions: ['Develop a new website', 'Build a mobile app']\n",
+      "        Gig IDs: [1, 2]\n",
       "        \n",
       "\n",
       "--------------------------------------------------------------------------------\n",
       "\u001b[33mjob_recruiter_assistant\u001b[0m (to chat_manager):\n",
       "\n",
       "[{\n",
-      "    \"gig_title\" : \"Create a web app intake form\",\n",
-      "    \"gig_id\"    : \"a\",\n",
-      "    \"success_score\" : \"0.71\",\n",
-      "    \"relevant_skills\" : \"[Python, SQL]\",\n",
-      "    \"confidence_score\" : \"0.75\"\n",
+      "    \"gig_title\" : \"Develop a new website\",\n",
+      "    \"gig_id\"    : \"1\",\n",
+      "    \"success_score\" : \"0.50\",\n",
+      "    \"relevant_skills\" : \"[Python]\",\n",
+      "    \"confidence_score\" : \"0.65\"\n",
       "},\n",
       "{\n",
-      "    \"gig_title\" : \"Create an iPhone app that measures how long someone spends using social media apps\",\n",
-      "    \"gig_id\"    : \"b\",\n",
-      "    \"success_score\" : \"0.55\",\n",
+      "    \"gig_title\" : \"Build a mobile app\",\n",
+      "    \"gig_id\"    : \"2\",\n",
+      "    \"success_score\" : \"0.35\",\n",
       "    \"relevant_skills\" : \"[Python]\",\n",
-      "    \"confidence_score\" : \"0.60\"\n",
-      "}]\n",
+      "    \"confidence_score\" : \"0.55\"\n",
+      "},]\n",
       "\n",
       "--------------------------------------------------------------------------------\n"
      ]
@@ -68,7 +69,7 @@
     "        # self.db_file = db_file\n",
     "        self.conn = None\n",
     "        self.freelancer_schema = ['freelancer_id', 'first_name', 'middle_name', 'last_name', 'email', 'linkedin_url', 'skills', 'country', 'base_currency']\n",
-    "        self.gigs_schema = ['gig_id', 'gig_name', 'client_id', 'description', 'compensation', 'timeframe', 'country']\n",
+    "        self.gigs_schema = ['gig_id', 'post_date', 'gig_name', 'client_id', 'description', 'compensation', 'currency', 'timeframe', 'country']\n",
     "\n",
     "    # Database relevant methods\n",
     "    def connect(self, params):\n",
@@ -119,7 +120,7 @@
     "        except sqlite3.Error as e:\n",
     "            print(\"Error creating {0} table: {1}\".format(freelancer_table, e))\n",
     "\n",
-    "    def insert_mock_data(self, params):\n",
+    "    def insert_mock_freelancers_data(self, params):\n",
     "        db = params['db']\n",
     "        freelancer_table = params['freelancer_table']\n",
     "        try:\n",
@@ -148,14 +149,92 @@
     "\n",
     "        return data\n",
     "\n",
+    "    #############\n",
+    "    # Gig Related\n",
+    "    #############\n",
+    "    def create_gigs_table(self, params):\n",
+    "        gigs_table = params['gigs_table']\n",
+    "        try:\n",
+    "            cursor = self.conn.cursor()\n",
+    "            cursor.execute('''\n",
+    "                CREATE TABLE IF NOT EXISTS {0} (\n",
+    "                    gig_id INTEGER PRIMARY KEY,\n",
+    "                    post_date DATETIME NOT NULL,\n",
+    "                    gig_name VARCHAR(250) NOT NULL,\n",
+    "                    client_id VARCHAR(250),\n",
+    "                    description TEXT,\n",
+    "                    compensation REAL,\n",
+    "                    currency VARCHAR(250),\n",
+    "                    timeframe VARCHAR(250),\n",
+    "                    country VARCHAR(250)\n",
+    "                )\n",
+    "            '''.format(gigs_table))\n",
+    "            self.conn.commit()\n",
+    "            print(\"Gigs table created successfully\")\n",
+    "        except sqlite3.Error as e:\n",
+    "            print(f\"Error creating gigs table: {e}\")\n",
+    "\n",
+    "    def insert_mock_gigs_data(self, params):\n",
+    "        gigs_table = params['gigs_table']\n",
+    "        try:\n",
+    "            cursor = self.conn.cursor()\n",
+    "            mock_data = [\n",
+    "                (\"2024-04-23\", \"Web Development\", \"12345\", \"Develop a new website\", '1000', \"USD\", \"2 weeks\", \"USA\"),\n",
+    "                (\"2024-04-24\", \"Mobile App Development\", \"67890\", \"Build a mobile app\", '1500', \"CAD\", \"1 month\", \"Canada\"),\n",
+    "                # Add more mock data as needed\n",
+    "            ]\n",
+    "            cursor.executemany('''\n",
+    "                INSERT INTO {0} (post_date, gig_name, client_id, description, compensation, currency, timeframe, country)\n",
+    "                VALUES (?, ?, ?, ?, ?, ?, ?, ?)\n",
+    "            '''.format(gigs_table), mock_data)\n",
+    "            self.conn.commit()\n",
+    "            print(\"Mock data inserted into gigs table successfully\")\n",
+    "        except sqlite3.Error as e:\n",
+    "            print(f\"Error inserting mock data into gigs table: {e}\")\n",
+    "\n",
     "    def fetch_gig_data(self, params):\n",
     "        # temporary data\n",
-    "        data = [('a', 'web development', 'aefi32', 'Create a web app intake form', '$500', '2 months', 'USA'),\n",
-    "                ('b', 'backend development', 'afdi32', 'Create an iPhone app that measures how long someone spends using social media apps', '$900', '3.5 months', 'USA')]\n",
-    "\n",
+    "        # data = [('a', 'web development', 'aefi32', 'Create a web app intake form', '$500', '2 months', 'USA'),\n",
+    "        #         ('b', 'backend development', 'afdi32', 'Create an iPhone app that measures how long someone spends using social media apps', '$900', '3.5 months', 'USA')]\n",
+    "        gigs_table = params['gigs_table']\n",
+    "        data = []\n",
+    "        try:\n",
+    "            cursor = self.conn.cursor()\n",
+    "            cursor.execute(\"SELECT gig_id, post_date, gig_name, client_id, description, compensation, currency, timeframe, country FROM {0}\".format(gigs_table))\n",
+    "            data = cursor.fetchall()\n",
+    "            print(\"Gig data fetched successfully:\")\n",
+    "        except sqlite3.Error as e:\n",
+    "            print(f\"Error fetching gig data: {e}\")\n",
     "        ### create method to pull gig data\n",
     "        \n",
     "        return data\n",
+    "\n",
+    "    #################\n",
+    "    # Client Related\n",
+    "    #################\n",
+    "    def create_clients_table(self, params):\n",
+    "        clients_table = params['clients_table']\n",
+    "        try:\n",
+    "            cursor = self.conn.cursor()\n",
+    "            cursor.execute('''\n",
+    "                CREATE TABLE IF NOT EXISTS {0} (\n",
+    "                    client_id INTEGER PRIMARY KEY,\n",
+    "                    entity_name VARCHAR(250) NOT NULL,\n",
+    "                    entity_id VARCHAR(250),\n",
+    "                    first_name VARCHAR(250),\n",
+    "                    middle_name VARCHAR(250),\n",
+    "                    last_name VARCHAR(250),\n",
+    "                    email VARCHAR(250),\n",
+    "                    currency VARCHAR(250),\n",
+    "                    country VARCHAR(250),\n",
+    "                    join_date DATE\n",
+    "                    -- Add more columns as needed\n",
+    "                )\n",
+    "            '''.format(clients_table))\n",
+    "            self.conn.commit()\n",
+    "            print(\"Clients table created successfully\")\n",
+    "        except sqlite3.Error as e:\n",
+    "            print(f\"Error creating clients table: {e}\")\n",
     "\n",
     "    # Condition data\n",
     "    def create_dataframe(self, data, _type):\n",
@@ -168,6 +247,29 @@
     "            df_out = pd.DataFrame(data, columns=self.gigs_schema)\n",
     "            \n",
     "        return df_out\n",
+    "\n",
+    "    def insert_mock_clients_data(self, params):\n",
+    "        clients_table = params['clients_table']\n",
+    "        try:\n",
+    "            cursor = self.conn.cursor()\n",
+    "            mock_data = [\n",
+    "                (\"Rainmaker Corp\", \"12345\", \"Chris\", \"\", \"Nolan\", \"chris@rainmaker.com\", \"USD\", \"USA\", \"2023-07-26\"),\n",
+    "                (\"Data Inc\", \"67890\", \"Stan\", \"\", \"Banks\", \"stan@datainc.com\", \"CAD\", \"Canada\", \"2021-02-11\"),\n",
+    "                # Add more mock data as needed\n",
+    "            ]\n",
+    "            cursor.executemany('''\n",
+    "                INSERT INTO {0} (entity_name, entity_id, first_name, middle_name, last_name, email, currency, country, join_date)\n",
+    "                VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
+    "            '''.format(clients_table), mock_data)\n",
+    "            self.conn.commit()\n",
+    "            print(\"Mock data inserted into clients table successfully\")\n",
+    "        except sqlite3.Error as e:\n",
+    "            print(f\"Error inserting mock data into clients table: {e}\")\n",
+    "\n",
+    "    \n",
+    "    #################\n",
+    "    # Gig Analysis\n",
+    "    #################\n",
     "\n",
     "    def construct_assessment(self, df_freelancer, df_gig):\n",
     "        freelancer_details = list(df_freelancer['skills'])\n",
@@ -226,7 +328,7 @@
     "            'db'                   : 'tugela',\n",
     "            'db_file'              : 'tugela.db',\n",
     "            'freelancer_table'     : 'freelancers',\n",
-    "            'client_table'         : 'clients',\n",
+    "            'clients_table'        : 'clients',\n",
     "            'gigs_table'           : 'gigs',\n",
     "            'freelancer_id'        : '1',\n",
     "            'create_database'      : False,\n",
@@ -243,9 +345,13 @@
     "if params['create_database'] == True:\n",
     "    # RE.create_database(params)\n",
     "    RE.create_freelancers_table(params)\n",
+    "    RE.create_gigs_table(params)\n",
+    "    RE.create_clients_table(params)\n",
     "\n",
     "if params['insert_data'] == True:\n",
-    "    RE.insert_mock_data(params)\n",
+    "    RE.insert_mock_freelancers_data(params)\n",
+    "    RE.insert_mock_clients_data(params)\n",
+    "    RE.insert_mock_gigs_data(params)\n",
     "\n",
     "if params['perform_assessment'] == True:\n",
     "    freelancer_data = RE.fetch_freelancer_data(params)\n",
