modified gig recommendation process to select highest probability of success engagement proposals

--- a/Backend/python/models/recommendationEngine.ipynb
+++ b/Backend/python/models/recommendationEngine.ipynb
@@ -29,16 +29,16 @@
       "[{\n",
       "    \"gig_title\" : \"Develop a new website\",\n",
       "    \"gig_id\"    : \"1\",\n",
-      "    \"success_score\" : \"0.50\",\n",
-      "    \"relevant_skills\" : \"[Python]\",\n",
-      "    \"confidence_score\" : \"0.65\"\n",
+      "    \"success_score\" : \"0.45\",\n",
+      "    \"relevant_skills\" : \"[Python, SQL]\",\n",
+      "    \"confidence_score\" : \"0.47\"\n",
       "},\n",
       "{\n",
       "    \"gig_title\" : \"Build a mobile app\",\n",
       "    \"gig_id\"    : \"2\",\n",
       "    \"success_score\" : \"0.35\",\n",
       "    \"relevant_skills\" : \"[Python]\",\n",
-      "    \"confidence_score\" : \"0.55\"\n",
+      "    \"confidence_score\" : \"0.37\"\n",
       "},]\n",
       "\n",
       "--------------------------------------------------------------------------------\n"
@@ -70,7 +70,7 @@
     "        self.conn = None\n",
     "        self.freelancer_schema = ['freelancer_id', 'first_name', 'middle_name', 'last_name', 'email', 'linkedin_url', 'skills', 'country', 'base_currency']\n",
     "        self.gigs_schema = ['gig_id', 'post_date', 'gig_name', 'client_id', 'description', 'compensation', 'currency', 'timeframe', 'country']\n",
-    "\n",
+    "    \n",
     "    # Database relevant methods\n",
     "    def connect(self, params):\n",
     "        db_file = params['db_file']\n",
@@ -318,6 +318,13 @@
     "    \n",
     "        return output_msg\n",
     "\n",
+    "    def sort_job_requests(self, gig_list, params):\n",
+    "        top_n = params['top_n']\n",
+    "        top_gigs = sorted(gig_list, key=lambda x: float(x[\"success_score\"]), reverse=True)\n",
+    "        top_gigs = top_gigs[0:top_n]\n",
+    "        \n",
+    "        return top_gigs\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -334,7 +341,7 @@
     "            'create_database'      : False,\n",
     "            'insert_data'          : False,\n",
     "            'perform_assessment'   : True,\n",
-    "            'recommendation_count' : 5,\n",
+    "            'top_n'                : 1,\n",
     "}\n",
     "\n",
     "\n",
@@ -343,7 +350,7 @@
     "RE.connect(params)\n",
     "\n",
     "if params['create_database'] == True:\n",
-    "    # RE.create_database(params)\n",
+    "    RE.create_database(params)\n",
     "    RE.create_freelancers_table(params)\n",
     "    RE.create_gigs_table(params)\n",
     "    RE.create_clients_table(params)\n",
@@ -360,7 +367,8 @@
     "    gig_data = RE.fetch_gig_data(params)\n",
     "    df_gigs = RE.create_dataframe(gig_data, _type='gigs')\n",
     "    message = RE.construct_assessment(df_freelancer, df_gigs)\n",
-    "    output_msg = RE.recruitment_analysis(message)"
+    "    output_msg = RE.recruitment_analysis(message)\n",
+    "    top_gigs = RE.sort_job_requests(output_msg, params)"
    ]
   }
  ],
