transformed gig assessment class into an API endpoint

--- a/Backend/python/models/recommendationEngine.ipynb
+++ b/Backend/python/models/recommendationEngine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "0dc7b155-6fb0-411a-9eeb-b564ca2f0806",
    "metadata": {},
    "outputs": [
@@ -27,19 +27,19 @@
       "\u001b[33mjob_recruiter_assistant\u001b[0m (to chat_manager):\n",
       "\n",
       "[{\n",
-      "    \"gig_title\" : \"Develop a new website\",\n",
-      "    \"gig_id\"    : \"1\",\n",
-      "    \"success_score\" : \"0.45\",\n",
-      "    \"relevant_skills\" : \"[Python, SQL]\",\n",
-      "    \"confidence_score\" : \"0.47\"\n",
+      "    \"gig_title\": \"Develop a new website\",\n",
+      "    \"gig_id\": 1,\n",
+      "    \"success_score\": 0.2,\n",
+      "    \"relevant_skills\": \"[Python, SQL]\",\n",
+      "    \"confidence_score\": 0.5\n",
       "},\n",
       "{\n",
-      "    \"gig_title\" : \"Build a mobile app\",\n",
-      "    \"gig_id\"    : \"2\",\n",
-      "    \"success_score\" : \"0.35\",\n",
-      "    \"relevant_skills\" : \"[Python]\",\n",
-      "    \"confidence_score\" : \"0.37\"\n",
-      "},]\n",
+      "    \"gig_title\": \"Build a mobile app\",\n",
+      "    \"gig_id\": 2,\n",
+      "    \"success_score\": 0.1,\n",
+      "    \"relevant_skills\": \"[Python, SQL]\",\n",
+      "    \"confidence_score\": 0.4\n",
+      "}]\n",
       "\n",
       "--------------------------------------------------------------------------------\n"
      ]
@@ -58,6 +58,8 @@
     "from langchain.agents import AgentType\n",
     "from prompts import JOB_RECRUITER_PROXY, JOB_RECRUITER_ASSISTANT\n",
     "from configs import llm_config\n",
+    "\n",
+    "from fastapi import FastAPI\n",
     "\n",
     "\n",
     "\n",
@@ -370,6 +372,14 @@
     "    output_msg = RE.recruitment_analysis(message)\n",
     "    top_gigs = RE.sort_job_requests(output_msg, params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "518938c3-b2d4-445f-b3f5-743ea7ad5f19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
